About and Experience senction finished, Z-Index bug needs revision

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -25,7 +25,7 @@
     position: fixed;
     top: 50px;
     left: 50px;
-    z-index: 10;
+    z-index: 100;
     -webkit-user-select: none;
     user-select: none;
 }
@@ -59,7 +59,7 @@
     cursor: pointer;
     
     opacity: 0; /* hide this */
-    z-index: 2; /* and place it over the hamburger */
+    z-index: 102; /* and place it over the hamburger */
     
     -webkit-touch-callout: none;
 }
@@ -74,7 +74,7 @@
     background: var(--btn-color);
     border-radius: 3px;
     
-    z-index: 1;
+    z-index: 101;
     
     transform-origin: 4px 0px;
     
@@ -134,7 +134,7 @@
     
     transform-origin: 0% 0%;
     transform: translate(-100%, 0);
-    
+    z-index: 100;
     transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
 }
 
