--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ html {
 
 .hero-container {
     width: 100vw;
-    height: calc(100vh - 100px);
+    height: calc(70vh - 100px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -155,7 +155,7 @@ html {
     max-width: 100%;
     height: auto;
     transform: scale(1.4);
-    z-index: 0;
+    z-index: auto;
 }
 
 .header-name-profession-container {
@@ -211,7 +211,7 @@ html {
     border-radius: 50%;
     background-color: var(--success-email);
     animation: ping 2s cubic-bezier(0, 0, 0.2, 1) infinite;
-    z-index: 0;
+    z-index: auto;
 }
 
 .header-hire-p {
@@ -282,16 +282,26 @@ html {
 
 /*----------SECTIONS----------*/
 .section-container {
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 70%;
+    width: 100%;
     max-width: 900px;
     gap: 70px;
+}
+
+.section {
+    /* background-color: var(--secondary-color); */
+    padding: 20px;
+    border-radius: 20px;
+    color: var(--text-color);
+    /* box-shadow: inset 0 3px 7px var(--shadow); */
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    justify-content: center;
+    width: 90%;
 }
 
 /*---------ABOUT----------------*/
@@ -301,64 +311,34 @@ html {
     padding: 30px;
 }
 
-.section {
-    /* background-color: var(--secondary-color); */
-    padding: 20px;
-    margin: 10px;
-    border-radius: 20px;
-    color: var(--text-color);
-    /* box-shadow: inset 0 3px 7px var(--shadow); */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-}
-
-.about-content-image {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 40px;
-    padding-bottom: 20px;
-    
-}
-
-.profile-container {
-    object-fit: contain;
-    width: 30%;
-}   
-
-.profile {
-    border-radius: 10px;
-    width: 100%;
-    max-width: 500px;
-    object-fit: contain;
-}
 
 .section-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 60%;
+    width: 90%;
     gap: 30px;
     padding: 20px 0;
 }
 
 .about {
     gap: 15px;
+    width: 100%;
+    border-radius: 10px;
+    background-color: var(--secondary-color);
+    padding: 20px;
+    box-sizing: border-box;
 }
 
 .p-about {
-    font-family: "Ubuntu sans", sans-serif;
-    font-weight: 500;
+    font-family: "Fredoka", sans-serif;
+    font-weight: 400;
     font-size: 1rem;
     line-height: 22px;
     color: var(--text-color);
     padding: 0 20px;
+    text-wrap: pretty;
 }
 
 .about-icon {
@@ -375,10 +355,17 @@ html {
 /*---------------EXPERIENCIA------------------*/
 .content-title {
     font-family: "Fredoka", sans-serif;
-    font-size: 1.7rem;
+    font-size: 1.3rem;
     color: var(--headers-text-color);
     text-shadow: -2px 2px 0px var(--shadow);
     font-weight: 500;
+}
+
+.section-experience {
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .experience-container {
@@ -388,13 +375,58 @@ html {
     justify-content: center;
     gap: 20px;
     width: 100%;
+    border-radius: 10px;
+    background-color: var(--secondary-color);
 }
 
-li::marker {
-    list-style: circle;
-    mask-size: 10px;
+.experience-section-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    max-width: 90%;
+    font-size: 0.9rem;
+    padding: 20px;
+    box-sizing: border-box;
 }
 
+.experience-btn-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.experience-btn-link {
+    background-color: var(--btn-color);
+    color: var(--btn-text-color);
+    padding: 5px;
+    margin-top: 5px;
+    border-radius: 5px;
+    width: 50%;
+    font-size: 1rem;
+    font-weight: 700;
+    text-decoration: none;
+    font-family: "Fredoka", sans-serif;
+    box-shadow: -4px 4px 0px var(--shadow);
+    transition: all 0.2s ease-in-out;
+}
+
+.experience-btn-link:hover {
+    background-color: var(--btn-hover);
+    transform: translate(-4px, 4px);
+    cursor: pointer;
+}
+
+.date {
+    color: var(--white);
+}
+
+li {
+    list-style: none;
+}
 
 /*---------------PROYECTOS------------------*/
 .section-projects {
@@ -755,10 +787,6 @@ li::marker {
     background-color: var(--text-color);
     left: calc(40% - 14px);
     border-radius: 10px;
-}
-
-.date li::marker{
-    font-size: 3rem;
 }
 
 /* PING */
